tests/ui/cached_cache_err_result_fallback_exclusive.stderr
error: `cache_err` and `result_fallback` are mutually exclusive
 --> tests/ui/cached_cache_err_result_fallback_exclusive.rs:4:4
  |
4 | fn my_fn(k: i32) -> Result<i32, ()> {
  |    ^^^^^
