tests/ui/cached_cache_err_result_fallback_exclusive.rs
use cached::macros::cached;

#[cached(ttl = 1, cache_err = true, result_fallback = true)]
fn my_fn(k: i32) -> Result<i32, ()> {
    Ok(k)
}

fn main() {}
